# CyberAttackDetectionAI

./: .gitignore  DEPLOYMENT_GUIDE.md  DOCUMENTATION.md  README.md  Test.md  code.md  config.yaml  create_structure.ps1  deploy-k8s.sh  docker-compose.dev.yml  list_interfaces.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  setup.py  simulation_runner.py  test_db_connection.py
backend/: .env  .env.example  Dockerfile  README.md  docker-compose.yml  init_ml.py  main.py  pyproject.toml  requirements-cpu.txt  requirements-gpu.txt  requirements.txt
backend/.github/workflows/: ci.yml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_threat_detection_tables.py
backend/api/routes/: auth.py  monitoring.py  security.py
backend/app/: main.py
backend/app/api/: deps.py  docs.py
backend/app/core/: cache.py  config.py  errors.py  logging.py  metrics.py  optimization.py  scheduler.py  settings.py  validators.py  versioning.py  websocket.py
backend/app/db/: init_db.py  session.py
backend/app/middleware/: cache.py  logging.py  rate_limit.py  security.py
backend/app/models/: __init__.py  agent.py  base.py  event.py  models.py  (+3 more)
backend/auth/: dependencies.py  jwt_handler.py  middleware.py
backend/config/: settings.py  settings.yaml
backend/core/: alert_system.py  packet_capture.py  websocket_manager.py
backend/database/: init_db.py  session.py
backend/deployment/: docker-compose.prod.yml
backend/ml_engine/: anomaly_detector.py
backend/models/: database_models.py  user_model.py
backend/monitoring/: monitor_service.py
backend/schemas/: user.py
backend/scripts/: disaster_recovery.py  generate_ssl.sh  performance_tests.py  run_performance_tests.sh
backend/security/: __init__.py  security_service.py
backend/services/: network_monitor.py
backend/simulation/: controller.py  traffic_generator.py
backend/tests/: conftest.py
backend/utils/: logger.py
src/agent/: CMakeLists.txt  agent.cpp  command_executor.hpp  data_collector.hpp  encryption_service.cpp  encryption_service.hpp  network_manager.cpp  network_manager.hpp  types.hpp
(+194 files in other folders)
